# community-detections-algorithm

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build.yaml
.github/workflows/: cmake.yml
data/: generate_input_datafile.py  les_miserables_graph.txt  put_data_here.txt
src/: GVGraph.cpp  GVGraph.h  main.cpp
test/: test.cpp
